fix for unreadable yellow links

--- a/src/app/frontend/assets/styles/modules/m-layer-details.scss
+++ b/src/app/frontend/assets/styles/modules/m-layer-details.scss
@@ -12,14 +12,6 @@
   }
 }
 
-/*
-.m-layer-details h1 {
-  @include overlay-title;
-  margin-right: 40px;
-  margin-bottom: 0;
-}
-*/
-
 .m-layer-details h1 {
   @include overlay-title;
   margin-top: -120px;
@@ -119,6 +111,6 @@
   }
 }
 
-.m-layer-details .section-load-more {
-
+.m-layer-details .text-content a {
+  color:$green;
 }
